--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.2",
+    "socket.io": "^4.7.2",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
